# clevr-xai

./: pyproject.toml
clevr_xai/eval/: config.yaml  eval_arras.py
